# anyka-v4l2rtspserver

./: README.md  main.cpp
inc/: ALSACapture.h  BaseServerMediaSubsession.h  DeviceInterface.h  V4L2DeviceSource.h  V4l2RTSPServer.h  VideoCaptureAccess.h
libs/: libwolfmqtt.so.5  libzbar.so.0
libv4l2cpp/: CMakeLists.txt
libv4l2cpp/inc/: AnykaAudioEncoder.h  AnykaCameraManager.h  AnykaDayNight.h  AnykaEncoderBase.h  AnykaMotionDetector.h  AnykaOsd.h  AnykaVideoEncoder.h  ConfigFile.h  FileFinder.h  FrameBuffer.h  SharedMemory.h  V4l2Capture.h  V4l2Device.h  V4l2DummyFd.h  ak_adec.h  ak_aenc.h  ak_ats.h  ak_demux.h  ak_drv_i2c.h  ak_drv_ptz.h  ak_drv_pwm.h  ak_global.h  ak_its.h  ak_mux.h  ak_osd.h  ak_sd_card.h  ak_venc.h  ak_vi.h  list.h  logger.h
libv4l2cpp/src/: AnykaAudioEncoder.cpp  AnykaCameraManager.cpp  AnykaDayNight.cpp  AnykaEncoderBase.cpp  AnykaMotionDetector.cpp  AnykaOsd.cpp  AnykaVideoEncoder.cpp  ConfigFile.cpp  FileFinder.cpp  FrameBuffer.cpp  GetFlag.cpp  GetImage.cpp  GetRecordedFiles.c  ReadWriteConfig.cpp  SetSharedConfig.cpp  SharedMemory.cpp  V4l2Capture.cpp  V4l2Device.cpp  V4l2DummyFd.cpp  V4l2Output.cpp
src/: ALSACapture.cpp  H264_V4l2DeviceSource.cpp  H265_V4l2DeviceSource.cpp  H26x_V4l2DeviceSource.cpp  ServerMediaSubsession.cpp  V4L2DeviceSource.cpp
